# template

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  doxygen.sh
tests/: CMakeLists.txt
tests/src/: dummy.test.cpp
